# scan3data

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  comparison.html  ocr_output_vision.txt  ocr_output_vision_v2.txt
crates/cli/: Cargo.toml  build.rs
crates/cli/src/: main.rs
crates/core_pipeline/: Cargo.toml
crates/core_pipeline/src/: decoder.rs  lib.rs  ocr.rs  preprocess.rs  types.rs
crates/llm_bridge/: Cargo.toml
crates/llm_bridge/src/: imagen.rs  lib.rs  ollama.rs  text.rs  vision.rs
crates/server/: Cargo.toml
crates/server/src/: main.rs
crates/yew_frontend/: Cargo.toml  index.html
crates/yew_frontend/src/: app.rs  lib.rs
crates/yew_frontend/src/components/: mod.rs  pipeline.rs  upload.rs
docs/: ai_agent_instructions.md  architecture.md  claude-web-research-preview-notes.md  ibm1130-character-sets.md  ibm1130-format-analysis.md  next-steps.md  notes.txt  ocr-correction-plan.md  research.txt  starting-prompt.txt
scripts/: build-all.sh  build-cli.sh  build-server.sh  build-wasm.sh  dev-wasm.sh  serve-api.sh  serve-spa.sh
wiki/: Architecture.md  Building.md  CLI.md  Contributing.md  Core-Pipeline.md  Data-Flow.md  Deployment-Modes.md  Home.md  LLM-Bridge.md  README.md  REST-API.md  Testing.md  Web-UI.md
