[workspace]
members = [
    "crates/core_pipeline",
    "crates/llm_bridge",
    "crates/cli",
    "crates/server",
    "crates/yew_frontend",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Mike <mike@softwarewrighter.com>"]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
# Shared dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"

# Image processing
image = "0.25"
imageproc = "0.25"

# HTTP client (for Ollama)
reqwest = { version = "0.12", features = ["json"] }

# Web server
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "trace", "cors"] }

# CLI
clap = { version = "4.0", features = ["derive"] }

# Yew/WASM
yew = { version = "0.21", features = ["csr"] }
wasm-bindgen = "0.2"
web-sys = "0.3"
gloo = "0.11"
gloo-net = "0.6"

# Async
async-trait = "0.1"
