[package]
name = "scan3data-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "scan3data"
path = "src/main.rs"

[dependencies]
core_pipeline = { path = "../core_pipeline" }
llm_bridge = { path = "../llm_bridge" }
clap = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
image = { workspace = true }
walkdir = "2.5"
chrono = "0.4"
base64 = "0.22"
