[package]
name = "core_pipeline"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
image = { workspace = true }
imageproc = { workspace = true }
sha2 = "0.10"

[dev-dependencies]
tempfile = "3.0"
