[package]
name = "llm_bridge"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
core_pipeline = { path = "../core_pipeline" }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
base64 = "0.22"
