[package]
name = "scan3data-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "scan3data-server"
path = "src/main.rs"

[dependencies]
core_pipeline = { path = "../core_pipeline" }
llm_bridge = { path = "../llm_bridge" }
axum = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
base64 = "0.22"
